# JordanMethod

./: CMakeLists.txt  JordanMethod.cpp  JordanMethod.h  dataCreation.cpp  dataCreation.h  main.cpp  readMatrix.cpp  readMatrix.h  readme.md
